include_directories(. ..)

message( STATUS "BINARY_DIR: ${CMAKE_CURRENT_BINARY_DIR}")
include_directories(${CMAKE_CURRENT_BINARY_DIR}/../y/zlib)

file(GLOB quark y/concurrent/*.hxx)
set(srcs ${quark})

Y_CreateLibrary(y
.
concurrent/quark
concurrent/split
concurrent/thread
concurrent/loop
concurrent/pipeline
concurrent/pipeline/task
concurrent/pipeline/dispatcher
concurrent/resource
locking
config
check
type
system
calculus
stream
stream/io
stream/libc
stream/libc/buffer
stream/libc/readable
stream/libc/writable
stream/data
stream/gzip
stream/bzip2
stream/hash
stream/char
text
text/ascii
text/base64
data
data/list
data/pool
data/small
data/small/proxy
data/small/proto
data/small/light
data/small/light/list
data/small/heavy
data/small/heavy/list
concurrent
random
hashing
hashing/to
sort
sort/nw
utest 
memory
memory/allocator
memory/exclusive
memory/buffer
memory/solitary
memory/object
ptr
container
container/iterator
container/matrix
container/cxx
container/algo
string
fft
apex
apex/m
apex/n
apex/n/proto
apex/z
apex/q
apex/ortho
counting
counting/c
sequence
ordered
ordered/core
associative
associative/suffix
associative/suffix/core
associative/suffix/map
associative/suffix/set
associative/hash
associative/hash/map
associative/hash/set
graphviz
mkl
mkl/cameo
mkl/cameo/add
mkl/antelope
vfs
information
information/stream
information/bwt
functor
woven
woven/survey
rtld
field
field/layout
)

source_group(concurrent FILES ${quark})
add_subdirectory(tests)
Y_Regression(core)
